--- a/practical8/README
+++ b/practical8/README
@@ -1,2 +1,2 @@
 This file is for Practical 8.
-The file has one C code file and one executable file.
+The file has two C code files and one executable file.
